--- a/app/views/active_scaffold_overrides/_export_form_body.html.erb
+++ b/app/views/active_scaffold_overrides/_export_form_body.html.erb
@@ -6,7 +6,7 @@
 <%= link_to as_(:select_none), '#', onclick: 'jQuery(".columnCheckbox").prop("checked", false);', class: 'active-scaffold-footer' %>
 <% end %>
 <div class="columns checkbox-list">
-<% export_config.columns.each do |column| -%>
+<% export_config.columns.each_column do |column| -%>
   <div class="column checkbox-wrapper">
     <%= content_tag(:label, check_box_tag("export_columns[#{column.name}]", 1, !export_config.default_deselected_columns.include?(column.name), :class => 'columnCheckbox') + "&nbsp;#{column.label}".html_safe) %>
   </div>
