fix inline js to avoid reloading page with turbolinks, later it should be moved to JS asset instead of inline JS

--- a/app/views/active_scaffold_overrides/_export_form_body.html.erb
+++ b/app/views/active_scaffold_overrides/_export_form_body.html.erb
@@ -1,9 +1,9 @@
 <% export_config = active_scaffold_config.export %>
 <h3><%=as_(:columns_for_export)%></h3>
-<% if ActiveScaffold.js_framework == :jquery %>
-<%= link_to as_(:select_all), '#', onclick: 'jQuery(".columnCheckbox").prop("checked", true);', class: 'active-scaffold-footer' %>
+<% if ActiveScaffold.js_framework == :jquery # TODO: use JS asset instead of inline JS %>
+<%= link_to as_(:select_all), '#', onclick: 'jQuery(".columnCheckbox").prop("checked", true); return false', class: 'active-scaffold-footer' %>
  |
-<%= link_to as_(:select_none), '#', onclick: 'jQuery(".columnCheckbox").prop("checked", false);', class: 'active-scaffold-footer' %>
+<%= link_to as_(:select_none), '#', onclick: 'jQuery(".columnCheckbox").prop("checked", false); return false', class: 'active-scaffold-footer' %>
 <% end %>
 <div class="columns checkbox-list">
 <% export_config.columns.each_column do |column| -%>
